--- a/portfolio.html
+++ b/portfolio.html
@@ -321,10 +321,10 @@
                 <div class="list_inner">
                     <div class="my_video">
                         <video controls style="max-height: 200px; width: 100%;">
-                            <source src="img/portfolio/ecommerce.mp4" type="video/mp4">
+                            <source src="img/portfolio/ecommerce2.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
-                        <div class="main" data-video-url="img/portfolio/ecommerce.mp4"></div>
+                        <div class="main" data-video-url="img/portfolio/ecommerce2.mp4"></div>
                     </div>
                 </div>
             </li>
