--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </div>
 <div class="right">
 <div class="in">
-<img src="img/about/6.png" alt />
+<img src="img/about/5.png" alt />
 <!-- <div class="play">
 <img class="svg" src="img/svg/rightArrow.svg" alt />
 <img class="animate_image" src="img/video/1.png" alt />
@@ -167,7 +167,7 @@
 <div class="text">
 <p>Over <span class="text_gradient">two years of developement</span>, I transform concepts projects using <span class="text_gradient">creativity</span> and <span class="text_gradient">interactive design</span> worldwide.</p>
 <div class="jara_tm_button_border">
-<a href="img/cv/1.jpg" download>Download My Resume</a>
+<a href="img/cv/Aown_Abbas_Resume.pdf" download>Download My Resume</a>
 </div>
 </div>
 <div class="counter">
